--- a/index.html
+++ b/index.html
@@ -40,6 +40,30 @@
         </div>
     </nav>
 
+
+    <!-- Banner Section -->
+    <section class="banner">
+        <div class="banner-container">
+            <!-- Mobile: Image first -->
+            <div class="banner-image">
+                <img src="./images/hero-flower.png" alt="Fresh Flowers">
+            </div>
+            
+            <!-- Content -->
+            <div class="banner-content">
+                <h1 class="banner-title">
+                    <span class="title-black">ALWAYS </span>
+                    <span class="title-orange">FRESH</span>
+                    <br>
+                    <span class="title-orange">FLOWERS</span>
+                </h1>
+                <p class="banner-text">
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.
+                </p>
+            </div>
+        </div>
+    </section>
+
     
 </body>
 </html>
