added deals section

--- a/index.html
+++ b/index.html
@@ -207,6 +207,61 @@
         </div>
     </section>
 
+     <!-- Latest Deals Section -->
+    <section class="deals-section">
+        <div class="deals-container">
+            <!-- Header -->
+            <div class="section-header">
+                <h2 class="section-title">
+                    <span class="title-orange">Latest </span>
+                    <span class="title-black">Deals</span>
+                </h2>
+                <p class="section-subtitle">
+                    Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                </p>
+            </div>
+            
+           <!-- Deals Grid -->
+<div class="deals-grid">
+
+    <!-- Left Column (2 small cards stacked) -->
+    <div class="deal-card-container">
+        <!-- Small Deal 1 -->
+        <div class="deal-card small-deal">
+            <div class="deal-image" style="background-image: url('/images/deal-bloom.png');">
+                <div class="deal-overlay">
+                    <h3 class="deal-title">60% Off | Bloom Plant</h3>
+                    <a href="#" class="deal-link">Shop Now</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Small Deal 2 (Hidden on mobile) -->
+        <div class="deal-card small-deal desktop-only">
+            <div class="deal-image" style="background-image: url('/images/deal-ana.png');">
+                <div class="deal-overlay">
+                    <h3 class="deal-title">30% Off | Ana Plant</h3>
+                    <a href="#" class="deal-link">Shop Now</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Right Column (Large card) -->
+    <div class="deal-card large-deal">
+        <div class="deal-image" style="background-image: url('/images/deal-zabo.png');">
+            <div class="deal-overlay">
+                <h3 class="deal-title large-title">25% Off | Zabo Plant</h3>
+                <a href="#" class="deal-link large-link">Shop Now</a>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+        </div>
+    </section>
+
     
 </body>
 </html>
