added join section

--- a/index.html
+++ b/index.html
@@ -262,6 +262,27 @@
         </div>
     </section>
 
+    <!-- Join Section -->
+    <section class="join-section">
+        
+        <div class="join-overlay"></div>
+        <div class="join-container">
+            <h2 class="join-title">
+                Join the colorful Bunch
+            </h2>
+            <div class="join-form">
+                <input 
+                    type="email" 
+                    placeholder="Write email" 
+                    class="join-input"
+                >
+                <button class="join-button">
+                    Subscribe
+                </button>
+            </div>
+        </div>
+    </section>
+
     
 </body>
 </html>
